// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Active 'TabItem' rendered correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
    onClick={[Function]}
  >
    <span>
      Brussels
    </span>
  </a>
</li>
`;

exports[`Not active 'TabItem' rendered correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item "
    href="#"
    onClick={[Function]}
  >
    <span>
      Hamburg
    </span>
  </a>
</li>
`;
